--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Backend for kp in Kominfo",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
