--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for kp in Kominfo",
   "main": "index.js",
   "type": "module",
-  "engines": {
+  "engine": {
     "node": "14.x"
   },
   "scripts": {
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "vercel": "^28.12.8"
   }
 }
